Complete task 9: Fix bugs on grid alignment
9. Fix bugs
    - [x] Space between rows
    - [x] Rows not stretching to end of grid container
- Apply centering alignment properties only to the body (remove it from .grid-container and .grid-row)
- Change justify-content: center -> flex-start in .grid-container
- Add align-items: stretch to .grid-container to stretch rows to the sides
- Remove unecessary sizing properties from .grid-row and .grid-cell

--- a/styles.css
+++ b/styles.css
@@ -29,11 +29,13 @@ label {
 
 /* Flex Containers */
 body,
-.grid-container,
-.grid-row {
+.grid-container {
+    gap: 0;
+}
+
+body {
     justify-content: center;
     align-items: center;
-    gap: 0;
 }
 
 .grid-creator-container,
@@ -44,16 +46,17 @@ body,
 .grid-container {
     width: 500px;
     height: 500px;
+    justify-content: flex-start;
+    align-items: stretch;
 }
 
 /* Flex Items */
+
 .grid-row {
     flex: 1;
     margin: 0px;
 }
 
 .grid-cell {
-    width: 20px;
-    height: 20px;
-    flex: auto;
+    flex: 1;
 }
